# asgion

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: configuration.md  generate_rules.py  rules.md
src/asgion/: __init__.py  __main__.py  pytest_plugin.py
src/asgion/cli/: __init__.py  _driver.py  _loader.py  _output.py  _runner.py  _sessions.py  _trace.py  main.py
src/asgion/core/: _types.py  config.py  context.py  inspector.py  rule.py  violation.py  wrapper.py
src/asgion/rules/: __init__.py  extension.py  general.py  http_fsm.py  lifespan_fsm.py  semantic.py  ws_fsm.py
src/asgion/spec/: __init__.py  _checks.py  _compiler.py  _http.py  _lifespan.py  _protocol.py  _websocket.py
src/asgion/trace/: __init__.py  _format.py  _recorder.py  _sampling.py  _storage.py
src/asgion/validators/: _helpers.py  base.py  extension.py  general.py  http_fsm.py  lifespan_fsm.py  semantic.py  spec_events.py  ws_fsm.py
tests/: _cli_fixtures.py  conftest.py  test_cli.py  test_compiler.py  test_config.py  test_context.py  test_detection.py  test_extension_events.py  test_general.py  test_helpers.py  test_http_events.py  test_http_fsm.py  test_http_scope.py  test_inspector.py  test_lifespan_events.py  test_lifespan_fsm.py  test_lifespan_scope.py  test_pytest_plugin.py  test_semantic.py  test_trace_format.py  test_trace_inspector.py  test_trace_recorder.py  test_trace_sampling.py  test_trace_storage.py  test_wrapper.py  test_ws_events.py  test_ws_fsm.py  test_ws_scope.py
tests/integration/: _scenarios.py  conftest.py  scenarios.md  test_django.py  test_falcon.py  test_fastapi.py  test_litestar.py  test_quart.py  test_starlette.py
